# bike-pic-renamer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  rename.py
